# GitSandbox

./: CMakeLists.txt  README.md
.github/: issue-branch.yml
HardwareTools/: CMakeLists.txt
HardwareTools/src/: CMakeLists.txt
HardwareTools/src/Encoders/AbsoluteEncoders/: IAbsoluteEncoder.hpp  MockAbsoluteEncoder.cpp  MockAbsoluteEncoder.hpp
HardwareTools/tests/: CMakeLists.txt
HardwareTools/tests/Encoders/AbsoluteEncoders/: MockAbsoluteEncoderTests.cpp
ImageProcessing/: CMakeLists.txt
ImageProcessing/src/: CMakeLists.txt
ImageProcessing/src/Filters/: PixelFilter.cpp  PixelFilter.hpp
ImageProcessing/src/Image/: IImage.hpp  ImageMock.cpp  ImageMock.hpp
ImageProcessing/tests/: CMakeLists.txt
ImageProcessing/tests/Filters/: PixelFilterTests.cpp
ImageProcessing/tests/Image/: ImageMockTests.cpp
Libraries/: Math.h
ProcessApp/: CMakeLists.txt
ProcessApp/src/: CMakeLists.txt
ProcessApp/src/Measurement/: MeasurementCycle.cpp  MeasurementCycle.hpp  MeasurementData.hpp  MeasurementService.cpp  MeasurementService.hpp
ProcessApp/tests/: CMakeLists.txt
ProcessApp/tests/Measurement/: MeasurementServiceTests.cpp
UI/: index.html
